--- a/kursi i kembimit.html
+++ b/kursi i kembimit.html
@@ -1,17 +1,31 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="sq">
 <head>
     <meta charset="UTF-8">
     <title>Këmbim Valutore</title>
 </head>
 <body>
-    <h2>Këmbim Valutor nga Euro në Lek</h2>
+    <h2>Këmbim Valutor në Lekë</h2>
+
     <form action="convert.php" method="post">
-        <label>Vlera në Euro (€):</label>
-        <input type="number" name="euro" step="0.01" required><br><br>
+        <label for="monedha">Zgjidh monedhën:</label>
+        <select name="monedha" id="monedha" required>
+            <option value="EUR">Euro (€)</option>
+            <option value="USD">Dollar Amerikan ($)</option>
+            <option value="GBP">Paund Britanik (£)</option>
+            <option value="CHF">Frangë Zvicerane (CHF)</option>
+            <option value="JPY">Jen Japonez (¥)</option>
+            <option value="CAD">Dollar Kanadez (C$)</option>
+        </select>
+        <br><br>
+
+        <label>Vlera për konvertim:</label>
+        <input type="number" name="vlera" step="0.01" required>
+        <br><br>
 
         <label>Koeficienti i këmbimit:</label>
-        <input type="number" name="kursi" step="0.01" required><br><br>
+        <input type="number" name="kursi" step="0.01" required>
+        <br><br>
 
         <input type="submit" value="Konverto">
         <input type="reset" value="Pastro">
